# construir

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: releng.yml
src/: CMakeLists.txt  construir.lua
