file(READ "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_PROJECT_NAME}.lua" APP_RAW)
string(REPLACE "@@BINDIR@@" "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}" APP_GEN "${APP_RAW}")
file(WRITE "${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}" "${APP_GEN}")

install(
  FILES ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}
  PERMISSIONS
    OWNER_READ OWNER_WRITE OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE
    WORLD_READ WORLD_EXECUTE
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
